Separate Exception Class, Reply API method , Article DTO refactoring
tested by Postman